--- a/src/panels/preview/fragments/QuestionItemFragment.module.css
+++ b/src/panels/preview/fragments/QuestionItemFragment.module.css
@@ -1,8 +1,9 @@
 .question_item {
     display: grid;
-    grid-template-columns: 30px minmax(120px, 3000px) 40px;
+    grid-template-columns: 30px minmax(120px, 3000px) 48px;
     grid-gap: 15px;
     height: 40px;
+    align-content: center;
 }
 
 .question_status {
@@ -15,11 +16,16 @@
     margin-bottom: 10px;
 }
 
+.title {
+    margin-bottom: auto;
+    margin-top: calc((24px - 1em) / 2);
+}
+
 .answer {
-    background-image: url("../../../img/preview/ic_question_mark.svg");
-    background-repeat: no-repeat;
-    background-origin: content-box;
-    background-color: white;
+    height: 24px;
+    width: 24px;
+    background: url("../../../img/preview/ic_question_mark.png") no-repeat center;
+    background-size: contain;
     border-style: none;
     outline: none;
 }
